# CrystalEntity

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  component.hpp  entity.hpp  events.hpp  manager.cpp  manager.hpp  pool.hpp  system.hpp
test/: CMakeLists.txt  component_test.cpp  data.hpp  entity_test.cpp  events_test.cpp  manager_test.cpp  pool_test.cpp
